app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: Mona Sans, Hubot Sans, -apple-system, BlinkMacSystemFont,
    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
    Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
  }
}

@layer base {
  @font-face {
    font-family: "Mona Sans";
    src: url("../public/Mona-Sans.woff2") format("woff2 supports variations"),
      url("../public/Mona-Sans.woff2") format("woff2-variations");
    font-weight: 200 900;
    font-stretch: 75% 125%;
  }
  @font-face {
    font-family: "Hubot Sans";
    src: url("../public/Hubot-Sans.woff2") format("woff2 supports variations"),
      url("../public/Hubot-Sans.woff2") format("woff2-variations");
    font-weight: 200 900;
    font-stretch: 75% 125%;
  }
}

